--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-tensorflow==2.12.0
+tensorflow_gpu-2.10.0
 pandas 
 dvc
 mlflow==2.2.2
@@ -17,3 +17,4 @@ Flask
 Flask-Cors
 gdown
 -e .
+ dvc mlflow python-box pyYAML joblib types-PyYAML scipy Flask Flask-Cors gdown ensure
